--- a/client/src/index.css
+++ b/client/src/index.css
@@ -36,7 +36,7 @@
 
 .active-link{
 
-    @apply relative text-blue-600 ease-in-out duration-500
+    @apply relative text-indigo-600 ease-in-out duration-500 font-bold
  
   }
 
